--- a/lesson6/style.css
+++ b/lesson6/style.css
@@ -18,6 +18,7 @@ img {
 
 h1,
 h2,
+h3,
 p,
 a,
 button {
@@ -56,14 +57,187 @@ header {
 .btn {
   border: none;
   background: none;
+  cursor: pointer;
 }
 
 main {
   background: #F1E4E6;
 }
 
-.maininfo {
+.bannerinfo {
+  background: #F1E4E6;
+  max-width: 1600px;
   display: flex;
+  justify-content: center;
   gap: 63.42px;
+  margin-bottom: 65px;
 }
 
+.bannerText {
+  border-left: 12px solid #F16D7F;
+  height: 92px;
+  margin-top: 290px;
+  padding-left: 16px;
+}
+
+.bannerText h1 {
+  color: #222;
+  font-size: 48px;
+  font-weight: 900;
+  line-height: normal;
+}
+
+.bannerText h2 {
+  color: #222;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.offer {
+  background: #FFF;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 30px;
+}
+
+.card1 {
+  width: 360px;
+  height: 260px;
+  background-image: url(./img/forwomen.png);
+}
+
+.card2 {
+  width: 360px;
+  height: 260px;
+  background-image: url(./img/formen.png);
+}
+
+.card3 {
+  width: 360px;
+  height: 260px;
+  background-image: url(./img/forkids.png);
+}
+
+.card4 {
+  width: 1140px;
+  height: 180px;
+  background-image: url(./img/accesories.png);
+}
+
+.shadow {
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 22, 22, 0.70);
+}
+
+.cardBig {
+  grid-column: 1 / 4;
+}
+
+.price {
+  padding-top: 105px;
+  padding-bottom: 105px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.priceBig {
+  padding-top: 65px;
+  padding-bottom: 65px;
+}
+
+.price h1 {
+  color: #FFF;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.price h2 {
+  color: #F16D7F;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.information {
+  margin-bottom: 47px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 6px;
+}
+
+.information h1 {
+  color: #222;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.information p {
+  color: #9F9F9F;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.products {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 30px;
+  margin-bottom: 48px;
+}
+
+.product h1 {
+  color: #000;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.product p {
+  color: #5D5D5D;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: normal;
+}
+
+.product h2 {
+  color: #F16D7F;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.prodInfo {
+  background: #F8F8F8;
+  padding: 24px 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 16px;
+}
+
+.finishbtn {
+  display: flex;
+  justify-content: center;
+}
+
+.btnAll {
+  width: 212px;
+  padding: 14px 37.5px 13px 37.5px;
+  color: #F26376;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+  border: 1px solid #FF6A6A;
+  background: #FFF;
+  margin-bottom: 60px;
+  cursor: pointer;
+}
