--- a/lesson6/style.css
+++ b/lesson6/style.css
@@ -98,8 +98,9 @@ main {
   background: #FFF;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: 2fr;
   gap: 30px;
+  margin-bottom: 96px;
 }
 
 .card1 {
@@ -134,7 +135,6 @@ main {
 
 .cardBig {
   grid-column: 1 / 4;
-  margin-bottom: 96px;
 }
 
 .price {
