--- a/lesson6/style.css
+++ b/lesson6/style.css
@@ -107,24 +107,28 @@ main {
   width: 360px;
   height: 260px;
   background-image: url(./img/forwomen.png);
+  background-size: cover;
 }
 
 .card2 {
   width: 360px;
   height: 260px;
   background-image: url(./img/formen.png);
+  background-size: cover;
 }
 
 .card3 {
   width: 360px;
   height: 260px;
   background-image: url(./img/forkids.png);
+  background-size: cover;
 }
 
 .card4 {
   width: 1140px;
   height: 180px;
   background-image: url(./img/accesories.png);
+  background-size: cover;
 }
 
 .shadow {
