--- a/lesson6/style.css
+++ b/lesson6/style.css
@@ -242,9 +242,149 @@ main {
   line-height: normal;
   border: 1px solid #FF6A6A;
   background: #FFF;
-  margin-bottom: 60px;
+  margin-bottom: 95px;
   cursor: pointer;
 }
+
+footer {
+  background: #222224;
+}
+
+.feature {
+  padding-top: 104px;
+  padding-bottom: 104px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  gap: 30px;
+}
+
+.feature__form {
+  max-width: 360px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.feature__form h1 {
+  margin-top: 25px;
+  color: #FBFBFB;
+  font-size: 19.96px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.feature__form p {
+  margin-top: 16px;
+  color: #FBFBFB;
+  font-size: 13.972px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.subcribe {
+  background: #FFF;
+  display: flex;
+  justify-content: center;
+}
+
+.photo__registration {
+  display: flex;
+  justify-content: space-between;
+  gap: 223.26px;
+}
+
+.photo {
+  width: 1600px;
+  height: 448px;
+  background-image: url(./img/photo_subscribe.png);
+  background-size: cover;
+}
+
+.photo__shadow {
+  width: 100%;
+  height: 100%;
+  background: rgba(244, 244, 244, 0.70);
+}
+
+.photo__registration-info {
+  padding-top: 97px;
+  max-width: 360px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.photo__registration-info p {
+  margin-top: 30px;
+  color: #222224;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.photo__registration-rega {
+  padding-top: 150px;
+  padding-bottom: 156px;
+  max-width: 557px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.photo__registration-rega h1 {
+  color: #222224;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 167.2%; /* 40.128px */
+}
+
+.photo__registration-rega h2 {
+  color: #222224;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 167.2%;
+  margin-bottom: 32px;
+}
+
+.photo__registration-rega input {
+  max-width: 256px;
+  min-height: 49px;
+  padding: 7px 64px 6px 22px;
+  border-radius: 30px 0 0 30px;
+  background: #E1E1E1;
+  border: none;
+  color: #222224;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.photo__registration-rega button {
+  max-width: 100px;
+  min-height: 49px;
+  padding: 7px 7px 6px 8px;
+  color: #FFF;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+  background: #F16D7F;
+  border-radius: 0 30px 30px 0;
+  border: none;
+}
+
+.forma {
+  display: flex;
+}
+
+
+
+
 
 @media(min-width: 768px) and (max-width: 1140px) {
   .container {
