--- a/lesson6/style.css
+++ b/lesson6/style.css
@@ -351,9 +351,12 @@ footer {
   margin-bottom: 32px;
 }
 
+.photo__registration-rega form {
+  max-width: 356px;
+  height: 49px;
+}
+
 .photo__registration-rega input {
-  max-width: 256px;
-  min-height: 49px;
   padding: 7px 64px 6px 22px;
   border-radius: 30px 0 0 30px;
   background: #E1E1E1;
@@ -362,11 +365,11 @@ footer {
   font-size: 14px;
   font-weight: 400;
   line-height: normal;
+  opacity: 0.671;
 }
 
 .photo__registration-rega button {
-  max-width: 100px;
-  min-height: 49px;
+  width: 100px;
   padding: 7px 7px 6px 8px;
   color: #FFF;
   text-align: center;
@@ -376,15 +379,33 @@ footer {
   background: #F16D7F;
   border-radius: 0 30px 30px 0;
   border: none;
+  cursor: pointer;
 }
 
 .forma {
   display: flex;
 }
 
+.background {
+  display: flex;
+  justify-content: space-between;
+}
 
+.background p {
+  width: 332px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  color: #FBFBFB;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+}
 
-
+.socialIcon {
+  display: flex;
+  align-items: center;
+  gap: 7.29px;
+}
 
 @media(min-width: 768px) and (max-width: 1140px) {
   .container {
@@ -478,7 +499,59 @@ footer {
   }
 
   .btnAll {
-    margin-bottom: 70.52px;
+    margin-bottom: 64.52px;
+  }
+
+  .feature {
+    padding-top: 48.16px;
+    padding-bottom: 64px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    gap: 48.37px;
+    justify-items: center
+  }
+
+  .feature__form p {
+    font-weight: 300;
+  }
+
+  .photo__registration {
+    flex-direction: column;
+    align-items: center;
+    gap: 48px;
+  }
+
+  .photo {
+    width: 768px;
+    height: 693px;
+    background-position: 24%;
+  }
+
+  .photo__registration-info {
+    padding-top: 64px;
+  }
+
+  .photo__registration-info p {
+    height: 99px;
+  }
+
+  .photo__registration-rega {
+    padding-top: 0;
+    padding-bottom: 140px;
+  }
+
+  .photo__registration-rega h1 {
+    line-height: 162%;
+  }
+
+  .photo__registration-rega h2 {
+    line-height: 162%;
+    margin-bottom: 27px;
+  }
+
+  .background p {
+    width: 251px;
   }
 }
 
