--- a/lesson6/style.css
+++ b/lesson6/style.css
@@ -662,6 +662,98 @@ footer {
   }
 
   .btnAll {
-    margin-bottom: 85px;
+    margin-bottom: 96px;
+  }
+
+  .feature {
+    padding-top: 48px;
+    padding-bottom: 81px;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    gap: 46.73px;
+    justify-items: center
+  }
+
+  .feature__form {
+    max-width: 347.82px;
+  }
+
+  .feature__form h1 {
+    margin-top: 24px;
+  }
+
+  .feature__form p {
+    margin-top: 14.66px;
+    font-weight: 300;
+  }
+
+  .photo__registration {
+    flex-direction: column;
+    align-items: center;
+    gap: 59px;
+  }
+
+  .photo {
+    width: 609.524px;
+    height: 550px;
+    background-position: 24%;
+  }
+
+  .photo__registration-info {
+    padding-top: 64px;
+    max-width: 343px;
+  }
+
+  .photo__registration-info p {
+    margin-top: 29.27px;
+    font-size: 18px;
+  }
+
+  .photo__registration-rega {
+    padding-top: 0px;
+    padding-bottom: 109.92px;
+    max-width: 341px;
+  }
+
+  .photo__registration-rega h1 {
+    line-height: 153.2%;
+  }
+
+  .photo__registration-rega h2 {
+    font-size: 14px;
+    line-height: 153.2%;
+    margin-bottom: 22.15px;
+  }
+
+  .photo__registration-rega form {
+    max-width: 341px;
+    height: 46.9px;
+  }
+
+  .photo__registration-rega input {
+    padding: 6.71px 63.7px 5.75px 21.07px;
+  }
+
+  .photo__registration-rega button {
+    width: 95.79px;
+    padding: 6.71px 6.7px 5.75px 7.66px;
+  }
+
+  .background {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  .background p {
+    width: 251px;
+    margin-top: 40px;
+    margin-bottom: 9px;
+  }
+
+  .socialIcon {
+    margin-top: 43px;
+    display: flex;
+    align-items: center;
+    gap: 7.29px;
   }
 }
