--- a/lesson6/style.css
+++ b/lesson6/style.css
@@ -69,9 +69,9 @@ main {
   background: #F1E4E6;
   max-width: 1600px;
   display: flex;
-  justify-content: center;
   gap: 63.42px;
   margin-bottom: 65px;
+  position: relative;
 }
 
 .bannerText {
@@ -79,6 +79,7 @@ main {
   height: 92px;
   margin-top: 290px;
   padding-left: 16px;
+  position: relative;
 }
 
 .bannerText h1 {
@@ -426,6 +427,146 @@ footer {
   right: -7px;
 }
 
+.menu {
+  background: #FFF;
+  width: 232px;
+  height: 634px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  filter: drop-shadow(6px 4px 35px rgba(0, 0, 0, 0.21));
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.menu h1 {
+  margin-top: 32px;
+  color: #000;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: normal;
+  padding-left: 33px;
+  margin-bottom: 4px;
+}
+
+.menu h2 {
+  color: #F16D7F;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.menu h3 {
+  color: #6F6E6E;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+  padding-left: 21.5px;
+}
+
+.menu__man {
+  padding-left: 32px;
+  height: 130px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between
+}
+
+.menu__woman {
+  padding-left: 32px;
+  height: 163px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between
+}
+
+.menu__kids {
+  padding-left: 32px;
+  height: 196px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between
+}
+
+.product1 {
+  width: 360px;
+  height: 420px;
+  background-image: url(./img/product1.jpg);
+  background-size: cover;
+}
+
+.product2 {
+  width: 360px;
+  height: 420px;
+  background-image: url(./img/product2.png);
+  background-size: cover;
+}
+
+.product3 {
+  width: 360px;
+  height: 420px;
+  background-image: url(./img/product3.jpg);
+  background-size: cover;
+}
+
+.product4 {
+  width: 360px;
+  height: 420px;
+  background-image: url(./img/product4.jpg);
+  background-size: cover;
+}
+
+.product5 {
+  width: 360px;
+  height: 420px;
+  background-image: url(./img/product5.png);
+  background-size: cover;
+}
+
+.product6 {
+  width: 360px;
+  height: 420px;
+  background-image: url(./img/product6.png);
+  background-size: cover;
+}
+
+.shadowProduct {
+  width: 100%;
+  height: 100%;
+  background: rgba(58, 56, 56, 0.86);
+}
+
+.btnProduct {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btnProduct button{
+  padding: 14.23px 16.41px 12.77px 13.54px;
+  color: #FFF;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+  border: 1px solid #FFFFFF;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 11.04px;
+}
+
+.hiddenshadowProduct {
+  display: none;
+}
+
+.product:hover .hiddenshadowProduct{
+  display: flex;
+}
+
 
 .btnAll:hover {
   background:#F16D7F;
@@ -475,6 +616,10 @@ svg:hover .icon{
 
   .bannerText h2 {
     font-size: 24px;
+  }
+
+  .hidemenu {
+    display: none;
   }
 
   .offer {
@@ -616,6 +761,10 @@ svg:hover .icon{
     margin-bottom: 64px;
     min-height: 363px;
     justify-content: center;
+  }
+
+  .hidemenu {
+    display: none;
   }
 
   .hidebanner {
