--- a/lesson6/style.css
+++ b/lesson6/style.css
@@ -246,7 +246,7 @@ main {
   background: #FFF;
   margin-bottom: 95px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: all 0.3s;
 }
 
 footer {
