--- a/lesson6/style.css
+++ b/lesson6/style.css
@@ -129,7 +129,7 @@ main {
 .card4 {
   width: 1140px;
   height: 180px;
-  background-image: url(./img/accesories.png);
+  background-image: url(./img/accesories.webp);
   background-size: cover;
 }
 
