--- a/lesson6/style.css
+++ b/lesson6/style.css
@@ -96,6 +96,10 @@ main {
   line-height: normal;
 }
 
+.bannerinfo .hidemenu{
+  display: none;
+}
+
 .offer {
   background: #FFF;
   display: grid;
@@ -451,14 +455,15 @@ footer {
   margin-bottom: 4px;
 }
 
-.menu h2 {
+.menu .menu-h2 {
   color: #F16D7F;
   font-size: 14px;
   font-weight: 400;
   line-height: normal;
+  padding-left: 0;
 }
 
-.menu h3 {
+.menu a {
   color: #6F6E6E;
   font-size: 14px;
   font-weight: 400;
@@ -625,10 +630,6 @@ svg:hover .icon{
     font-size: 24px;
   }
 
-  .hidemenu {
-    display: none;
-  }
-
   .offer {
     gap: 20px;
     margin-bottom: 110px;
@@ -770,10 +771,6 @@ svg:hover .icon{
     justify-content: center;
   }
 
-  .hidemenu {
-    display: none;
-  }
-
   .hidebanner {
     display: none;
   }
@@ -845,6 +842,10 @@ svg:hover .icon{
     gap: 16.61px;
     margin-bottom: 40.61px;
   }
+
+  .products.container {
+      max-width: 359px;
+    }
 
   .product p {
     font-weight: 400;
