--- a/lesson6/style.css
+++ b/lesson6/style.css
@@ -75,7 +75,7 @@ main {
 }
 
 .bannerText {
-  border-left: 12px solid #F16D7F;
+  border-left: 12px solid #c96674;
   height: 92px;
   margin-top: 290px;
   padding-left: 16px;
@@ -169,7 +169,7 @@ main {
 }
 
 .price h2 {
-  color: #F16D7F;
+  color: #c96674;
   font-size: 24px;
   font-weight: 700;
   line-height: normal;
@@ -220,7 +220,7 @@ main {
 }
 
 .product h2 {
-  color: #F16D7F;
+  color: #c96674;
   font-size: 16px;
   font-weight: 400;
   line-height: normal;
@@ -383,7 +383,7 @@ footer {
   font-size: 14px;
   font-weight: 400;
   line-height: normal;
-  background: #F16D7F;
+  background: #c96674;
   border-radius: 0 30px 30px 0;
   border: none;
   cursor: pointer;
@@ -456,7 +456,7 @@ footer {
 }
 
 .menu .menu-h2 {
-  color: #F16D7F;
+  color: #c96674;
   font-size: 14px;
   font-weight: 400;
   line-height: normal;
@@ -574,7 +574,7 @@ footer {
 }
 
 .btnAll:hover {
-  background-color:#F16D7F;
+  background-color:#c96674;
   color: #FFFFFF;
 }
 
@@ -591,7 +591,7 @@ svg:hover path{
 }
 
 svg:hover .icon{
-  fill: #F16D7F;
+  fill: #c96674;
 }
 
 
