--- a/lesson6/style.scss
+++ b/lesson6/style.scss
@@ -1,4 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
+@import 'vars';
+
 * {
   margin: 0;
   padding: 0;
@@ -31,17 +34,17 @@ button {
 }
 
 .header {
-  background: #222;
-}
-.header__navigation {
-  display: flex;
-  justify-content: space-between;
-}
-.header__logos {
-  margin-bottom: 19px;
-  display: flex;
-  align-items: flex-end;
-  gap: 41px;
+  background: $primary-color;
+  &__navigation {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__logos {
+    margin-bottom: 19px;
+    display: flex;
+    align-items: flex-end;
+    gap: 41px;
+  }
 }
 
 .buttonList {
@@ -59,11 +62,11 @@ button {
 }
 
 main {
-  background: #F1E4E6;
+  background: $banner-color;
 }
 
 .bannerinfo {
-  background: #F1E4E6;
+  background: $banner-color;
   max-width: 1600px;
   display: flex;
   gap: 63.42px;
@@ -72,26 +75,28 @@ main {
 }
 
 .bannerText {
-  border-left: 12px solid #F16D7F;
+  border-left: 12px solid $text-color;
   height: 92px;
   margin-top: 290px;
   padding-left: 16px;
   position: relative;
-}
-.bannerText h1 {
-  color: #222;
-  font-size: 48px;
-  font-weight: 900;
-  line-height: normal;
-}
-.bannerText h2 {
-  color: #222;
-  font-size: 32px;
-  font-weight: 700;
-  line-height: normal;
+
+  h1 {
+    color: $primary-color;
+    font-size: 48px;
+    font-weight: 900;
+    line-height: normal;
+  }
+
+  h2 {
+    color: $primary-color;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: normal;
+  }
 }
 
-.bannerinfo .hidemenu {
+.bannerinfo .hidemenu{
   display: none;
 }
 
@@ -135,11 +140,11 @@ main {
 .shadow {
   width: 100%;
   height: 100%;
-  background: rgba(33, 22, 22, 0.7);
+  background: rgba(33, 22, 22, 0.70);
 }
 
 .cardBig {
-  grid-column: 1/4;
+  grid-column: 1 / 4;
 }
 
 .price {
@@ -148,19 +153,21 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.price h1 {
-  color: #FFF;
-  text-align: center;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: normal;
-}
-.price h2 {
-  color: #F16D7F;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: normal;
+
+  h1 {
+    color: #FFF;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  h2 {
+    color: $text-color;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: normal;
+  }
 }
 
 .priceBig {
@@ -174,18 +181,20 @@ main {
   flex-direction: column;
   align-items: center;
   gap: 6px;
-}
-.information h1 {
-  color: #222;
-  font-size: 30px;
-  font-weight: 400;
-  line-height: normal;
-}
-.information p {
-  color: #9F9F9F;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: normal;
+
+  h1 {
+    color: $primary-color;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  p {
+    color: #9F9F9F;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: normal;
+  }
 }
 
 .products {
@@ -211,7 +220,7 @@ main {
 }
 
 .product h2 {
-  color: #F16D7F;
+  color: $text-color;
   font-size: 16px;
   font-weight: 400;
   line-height: normal;
@@ -245,7 +254,7 @@ main {
 }
 
 footer {
-  background: #222224;
+  background: $footer-color;
 }
 
 .feature {
@@ -255,28 +264,31 @@ footer {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
   gap: 30px;
-}
-.feature__form {
-  max-width: 360px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-.feature__form h2 {
-  margin-top: 25px;
-  color: #FBFBFB;
-  font-size: 19.96px;
-  font-weight: 400;
-  line-height: normal;
-}
-.feature__form p {
-  margin-top: 16px;
-  color: #FBFBFB;
-  font-size: 13.972px;
-  font-weight: 400;
-  line-height: normal;
+
+  &__form {
+    max-width: 360px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__form h2 {
+    margin-top: 25px;
+    color: #FBFBFB;
+    font-size: 19.96px;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  &__form p {
+    margin-top: 16px;
+    color: #FBFBFB;
+    font-size: 13.972px;
+    font-weight: 400;
+    line-height: normal;
+  }
 }
 
 .subcribe {
@@ -301,7 +313,7 @@ footer {
 .photo__shadow {
   width: 100%;
   height: 100%;
-  background: rgba(244, 244, 244, 0.7);
+  background: rgba(244, 244, 244, 0.70);
 }
 
 .photo__registration-info {
@@ -310,14 +322,15 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.photo__registration-info p {
-  margin-top: 30px;
-  color: #222224;
-  text-align: center;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: normal;
+
+  p {
+    margin-top: 30px;
+    color: $footer-color;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: normal;
+  }
 }
 
 .photo__registration-rega {
@@ -327,48 +340,53 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.photo__registration-rega h1 {
-  color: #222224;
-  text-align: center;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 167.2%; /* 40.128px */
-}
-.photo__registration-rega h2 {
-  color: #222224;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 167.2%;
-  margin-bottom: 32px;
-}
-.photo__registration-rega form {
-  max-width: 356px;
-  height: 49px;
-}
-.photo__registration-rega input {
-  padding: 7px 64px 6px 22px;
-  border-radius: 30px 0 0 30px;
-  background: #E1E1E1;
-  border: none;
-  color: #222224;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: normal;
-  opacity: 0.671;
-}
-.photo__registration-rega button {
-  width: 100px;
-  padding: 7px 7px 6px 8px;
-  color: #FFF;
-  text-align: center;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: normal;
-  background: #F16D7F;
-  border-radius: 0 30px 30px 0;
-  border: none;
-  cursor: pointer;
+
+  h1 {
+    color: $footer-color;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 167.2%; /* 40.128px */
+  }
+
+  h2 {
+    color: $footer-color;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 167.2%;
+    margin-bottom: 32px;
+  }
+
+  form {
+    max-width: 356px;
+    height: 49px;
+  }
+
+  input {
+    padding: 7px 64px 6px 22px;
+    border-radius: 30px 0 0 30px;
+    background: #E1E1E1;
+    border: none;
+    color: $footer-color;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: normal;
+    opacity: 0.671;
+  }
+
+  button {
+    width: 100px;
+    padding: 7px 7px 6px 8px;
+    color: #FFF;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: normal;
+    background: $text-color;
+    border-radius: 0 30px 30px 0;
+    border: none;
+    cursor: pointer;
+  }
 }
 
 .forma {
@@ -378,15 +396,16 @@ footer {
 .background {
   display: flex;
   justify-content: space-between;
-}
-.background p {
-  width: 332px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  color: #FBFBFB;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: normal;
+
+  p {
+    width: 332px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    color: #FBFBFB;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: normal;
+  }
 }
 
 .socialIcon {
@@ -397,7 +416,7 @@ footer {
 
 .buttonList::after {
   content: "5";
-  background: #F16D7F;
+  background: $text-color;
   width: 19px;
   height: 19px;
   border-radius: 50px;
@@ -424,26 +443,28 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 20px;
-}
-.menu h1 {
-  margin-top: 32px;
-  color: #000;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: normal;
-  padding-left: 33px;
-  margin-bottom: 4px;
-}
-.menu a {
-  color: #6F6E6E;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: normal;
-  padding-left: 21.5px;
+
+  h1 {
+    margin-top: 32px;
+    color: #000;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: normal;
+    padding-left: 33px;
+    margin-bottom: 4px;
+  }
+
+  a {
+    color: #6F6E6E;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: normal;
+    padding-left: 21.5px;
+  }
 }
 
 .menu .menu-h2 {
-  color: #F16D7F;
+  color: $text-color;
   font-size: 14px;
   font-weight: 400;
   line-height: normal;
@@ -455,7 +476,7 @@ footer {
   height: 130px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-between
 }
 
 .menu__woman {
@@ -463,7 +484,7 @@ footer {
   height: 163px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-between
 }
 
 .menu__kids {
@@ -471,7 +492,7 @@ footer {
   height: 196px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-between
 }
 
 .product1 {
@@ -530,7 +551,7 @@ footer {
   align-items: center;
 }
 
-.btnProduct button {
+.btnProduct button{
   padding: 14.23px 16.41px 12.77px 13.54px;
   color: #FFF;
   font-size: 14px;
@@ -548,106 +569,127 @@ footer {
   display: none;
 }
 
-.product:hover .hiddenshadowProduct {
+.product:hover .hiddenshadowProduct{
   display: flex;
 }
 
 .btnAll:hover {
-  background-color: #F16D7F;
+  background-color: $text-color;
   color: #FFFFFF;
 }
 
-svg path {
+svg path{
   transition: fill 0.3s;
 }
 
-svg .icon {
+svg .icon{
   transition: fill 0.3s;
 }
 
-svg:hover path {
+svg:hover path{
   fill: #FFFFFF;
 }
 
-svg:hover .icon {
-  fill: #F16D7F;
+svg:hover .icon{
+  fill: $text-color;
 }
 
-@media (min-width: 768px) and (max-width: 1140px) {
+
+@media(min-width: 768px) and (max-width: 1140px) {
   .container {
     max-width: 735px;
   }
+
   .logos {
     margin-bottom: 18px;
   }
+
   .banner768 {
     max-width: 386px;
   }
+
   .buttonList {
     margin-top: 27px;
     margin-bottom: 18px;
     gap: 25px;
   }
+
   .bannerinfo {
     gap: 39px;
   }
+
   .bannerText {
     margin-top: 138px;
   }
+
   .bannerText h1 {
     font-size: 44px;
   }
+
   .bannerText h2 {
     font-size: 24px;
   }
+
   .offer {
     gap: 20px;
     margin-bottom: 110px;
   }
+
   .card1 {
     width: 231.973px;
     height: 167.617px;
   }
+
   .card2 {
     width: 231.973px;
     height: 167.617px;
   }
+
   .card3 {
     width: 232.392px;
     height: 167px;
   }
+
   .card4 {
     width: 734.581px;
     height: 116.043px;
   }
+
   .price {
     padding-top: 59px;
     padding-bottom: 59px;
   }
+
   .priceBig {
     padding-top: 33px;
     padding-bottom: 33px;
   }
+
   .information {
     margin-bottom: 73px;
     gap: 3.3px;
   }
+
   .products {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 16px;
     margin-bottom: 32.48px;
   }
+
   .prodInfo {
     padding: 24.35px 28.8px 20px 16.46px;
     gap: 12.65px;
   }
+
   .product p {
     margin-bottom: 5.35px;
   }
+
   .btnAll {
     margin-bottom: 64.52px;
   }
+
   .feature {
     padding-top: 48.16px;
     padding-bottom: 64px;
@@ -655,209 +697,259 @@ svg:hover .icon {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr);
     gap: 48.37px;
-    justify-items: center;
+    justify-items: center
   }
+
   .feature__form p {
     font-weight: 300;
   }
+
   .photo__registration {
     flex-direction: column;
     align-items: center;
     gap: 48px;
   }
+
   .photo {
     width: 768px;
     height: 693px;
     background-position: 24%;
   }
+
   .photo__registration-info {
     padding-top: 64px;
   }
+
   .photo__registration-info p {
     height: 99px;
   }
+
   .photo__registration-rega {
     padding-top: 0;
     padding-bottom: 140px;
   }
+
   .photo__registration-rega h1 {
     line-height: 162%;
   }
+
   .photo__registration-rega h2 {
     line-height: 162%;
     margin-bottom: 27px;
   }
+
   .background p {
     width: 251px;
   }
 }
-@media (max-width: 767px) {
+
+@media(max-width: 767px) {
   .container {
     max-width: 343px;
   }
+
   .logos {
     margin-bottom: 18px;
   }
+
   .buttonList {
     margin-top: 25px;
     margin-bottom: 26px;
   }
+
   .buttonList::after {
     content: none;
   }
+
   .hideBtn {
     display: none;
   }
+
   .bannerinfo {
     margin-bottom: 64px;
     min-height: 363px;
     justify-content: center;
   }
+
   .hidebanner {
     display: none;
   }
+
   .bannerText {
     height: 61px;
     margin-top: 148px;
     padding-left: 15px;
   }
+
   .bannerText h1 {
     font-size: 38px;
   }
+
   .bannerText h2 {
     font-size: 20px;
   }
+
   .offer {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr) 111px;
     gap: 32px;
     margin-bottom: 64px;
   }
+
   .card1 {
     width: 343px;
     height: 247px;
   }
+
   .card2 {
     width: 344px;
     height: 249px;
   }
+
   .card3 {
     width: 343px;
     height: 248px;
   }
+
   .card4 {
     width: 343.262px;
     height: 111px;
     background-position: center;
   }
+
   .cardBig {
-    grid-column: 1/2;
+    grid-column: 1 / 2;
   }
+
   .price {
     padding-top: 102px;
     padding-bottom: 76px;
   }
+
   .priceBig {
     padding-top: 30px;
     padding-bottom: 31px;
   }
+
   .information {
     margin-bottom: 64.7px;
     gap: 3.3px;
   }
+
   .products {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6, 1fr);
     gap: 16.61px;
     margin-bottom: 40.61px;
   }
+
   .products.container {
-    max-width: 359px;
-  }
+      max-width: 359px;
+    }
+
   .product p {
     font-weight: 400;
     margin-bottom: 5.33px;
   }
+
   .prodInfo {
     padding: 23.28px 28.72px 19.94px 16.41px;
     gap: 12.62px;
   }
+
   .btnAll {
     margin-bottom: 96px;
   }
+
   .feature {
     padding-top: 48px;
     padding-bottom: 81px;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr);
     gap: 46.73px;
-    justify-items: center;
+    justify-items: center
   }
+
   .feature__form {
     max-width: 347.82px;
   }
+
   .feature__form h2 {
     margin-top: 24px;
   }
+
   .feature__form p {
     margin-top: 14.66px;
     font-weight: 300;
   }
+
   .photo__registration {
     flex-direction: column;
     align-items: center;
     gap: 59px;
   }
+
   .photo {
     width: 609.524px;
     height: 550px;
     background-position: 27%;
   }
+
   .photo__registration-info {
     padding-top: 64px;
     max-width: 343px;
   }
+
   .photo__registration-info p {
     margin-top: 29.27px;
     font-size: 18px;
   }
+
   .photo__registration-rega {
     padding-top: 0px;
     padding-bottom: 109.92px;
     max-width: 341px;
   }
+
   .photo__registration-rega h1 {
     line-height: 153.2%;
   }
+
   .photo__registration-rega h2 {
     font-size: 14px;
     line-height: 153.2%;
     margin-bottom: 22.15px;
   }
+
   .photo__registration-rega form {
     max-width: 341px;
     height: 46.9px;
   }
+
   .photo__registration-rega input {
     padding: 6.71px 63.7px 5.75px 21.07px;
   }
+
   .photo__registration-rega button {
     width: 95.79px;
     padding: 6.71px 6.7px 5.75px 7.66px;
   }
+
   .background {
     flex-direction: column-reverse;
     align-items: center;
   }
+
   .background p {
     width: 251px;
     margin-top: 40px;
     margin-bottom: 9px;
   }
+
   .socialIcon {
     margin-top: 43px;
     display: flex;
     align-items: center;
     gap: 7.29px;
   }
-}/*# sourceMappingURL=style.css.map */
+}
