--- a/lesson6/style.scss
+++ b/lesson6/style.scss
@@ -354,8 +354,10 @@ main {
   width: 282.907px;
   margin-top: 48.5px;
   margin-bottom: 96.5px;
+  padding: 11.5px 16px 12.5px 16px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
   border: 1px solid #EBEBEB;
 
   a {
@@ -374,6 +376,11 @@ main {
     font-size: 16px;
     font-weight: 300;
     line-height: normal;
+  }
+
+  &__group {
+    display: flex;
+    align-items: baseline;
   }
 }
 
