--- a/lesson6/style.css
+++ b/lesson6/style.css
@@ -76,7 +76,6 @@ main {
   justify-content: space-between;
   align-items: center;
   height: 148px;
-  margin-bottom: 51px;
   position: relative;
 }
 .bannerinfoCatalog__message h2 {
@@ -105,6 +104,7 @@ main {
 .filter {
   display: flex;
   gap: 320px;
+  margin-top: 51px;
   margin-bottom: 65px;
 }
 .filter__info {
@@ -152,6 +152,57 @@ main {
   color: #222;
   font-size: 32px;
   font-weight: 700;
+  line-height: normal;
+}
+
+.bannerinfoProduct {
+  background: #F7F7F7;
+  height: 777px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bannerinfoProduct__overlay {
+  max-width: 1140px;
+  height: 601px;
+  border: 1px solid #EAEAEA;
+  background: #FFF;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: -64.13px;
+  margin-bottom: 129.41px;
+}
+.bannerinfoProduct__overlay h1 {
+  margin-top: 64.13px;
+  margin-bottom: 12.1px;
+  color: #F16D7F;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+}
+.bannerinfoProduct__overlay h2 {
+  margin-top: 12.1px;
+  color: #4D4D4D;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: normal;
+}
+.bannerinfoProduct__overlay p {
+  margin-top: 48.41px;
+  width: 555px;
+  color: #5E5E5E;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+}
+.bannerinfoProduct__overlay h3 {
+  margin-top: 32.27px;
+  color: #EF5B70;
+  font-size: 24px;
+  font-weight: 400;
   line-height: normal;
 }
 
@@ -268,6 +319,12 @@ main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
+  gap: 30px;
+}
+
+.productsProduct {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 30px;
 }
 
