--- a/lesson6/style.css
+++ b/lesson6/style.css
@@ -252,6 +252,23 @@ main {
   display: flex;
   gap: 320px;
 }
+.filter__main[open] {
+  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  width: 360px;
+  height: 531px;
+  padding: 13px 17px 16px;
+  box-sizing: border-box;
+  position: relative;
+}
+.filter__main[open] summary.filter__summary {
+  color: #EF5B70;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: normal;
+}
+.filter__main[open] svg path {
+  fill: #EF5B70;
+}
 .filter__summary {
   display: flex;
   align-items: center;
@@ -261,11 +278,46 @@ main {
   font-weight: 600;
   line-height: normal;
 }
-.filter.filter__info_summary {
+.filter__info {
+  margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.filter__info__details[open] summary {
+  color: #EF5B70;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+}
+.filter__info_summary {
   color: #6F6E6E;
   font-size: 14px;
   font-weight: 400;
   line-height: normal;
+  border-bottom: 1px solid #EBEBEB;
+  width: 310px;
+  height: 37px;
+  border-left: 5px solid #EF5B70;
+  padding-left: 11px;
+  display: flex;
+  align-items: center;
+}
+.filter__info__products {
+  display: flex;
+  flex-direction: column;
+  gap: 10.5px;
+  padding: 24px 17px 6px;
+  box-sizing: border-box;
+}
+.filter__info__products a {
+  color: #6F6E6E;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+}
+.filter__info__products a:hover {
+  color: #EF5B70;
 }
 
 .filter__sort {
